correction mis-alignement

--- a/src/styles/pages/about.module.css
+++ b/src/styles/pages/about.module.css
@@ -1,17 +1,17 @@
 .about_container{
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
 	width: 100%;
 	.title{
+		width: 100%;
 		font-size: 600%;
 		margin-top: 10rem;
 		margin-bottom: 8rem;
 		text-align: center;
 		font-weight: bold;
 		line-height: 80%;
-		width: 500px;
 		color: #ffffff;
 		text-shadow: 0 0 7px #fff,
 		0 0 10px var(--color-tertiary),
@@ -24,6 +24,9 @@
 		margin-bottom: 20rem;
 		color: var(--color-accent-secondary);
 		font-size: 500%;
+	}
+	.text_content{
+		font-size: 20px;
 	}
 	.left_container{
 		display: flex;
@@ -40,6 +43,7 @@
 			border-left: var(--color-accent-secondary) solid 1px;
 			border-bottom: var(--color-accent-secondary) solid 5px;
 			color: var(--color-accent-secondary);
+
 		}
 	}
 	.right_container{
